RESOLVED FIXED234095
[Playstation] Fix build break after r286751 with INTELLIGENT_TRACKING_PREVENTION enabled
https://bugs.webkit.org/show_bug.cgi?id=234095
Summary [Playstation] Fix build break after r286751 with INTELLIGENT_TRACKING_PREVENT...
Jigen Zhou
Reported 2021-12-09 11:34:04 PST
In file included from WebKit/DerivedSources/unified-sources/UnifiedSource-72468c22-4.cpp:1: In file included from C:/work/webkit/jenkins/neko/Source/WebKit\NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:32: C:/work/webkit/jenkins/neko/Source/WebKit/NetworkProcess\NetworkSession.h:197:174: error: no type named 'ResourceError' in namespace 'WebCore' virtual void requestResource(WebPageProxyIdentifier, WebCore::ResourceRequest&&, CompletionHandler<void(const IPC::DataReference&, WebCore::ResourceResponse&&, WebCore::ResourceError&&)>&&) { } ~~~~~~~~~^ 1 error generated.
Attachments
Patch (1.25 KB, patch)
2021-12-09 12:02 PST, Jigen Zhou
no flags
Patch (1.23 KB, patch)
2021-12-09 12:55 PST, Jigen Zhou
no flags
Jigen Zhou
Comment 1 2021-12-09 12:02:12 PST
Don Olmstead
Comment 2 2021-12-09 12:26:32 PST
Comment on attachment 446585 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=446585&action=review > Source/WebKit/NetworkProcess/NetworkSession.h:44 > +#include <WebCore/ResourceError.h> Can you confirm that a forward declaration wouldn't resolve the issue? Ideally we only include what we absolutely need to in the header file.
Jigen Zhou
Comment 3 2021-12-09 12:55:41 PST
Created attachment 446593 [details] Patch Yes, a forward declaration works. Thanks.
EWS
Comment 4 2021-12-09 20:50:02 PST
Committed r286830 (245063@main): <https://commits.webkit.org/245063@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 446593 [details].
Radar WebKit Bug Importer
Comment 5 2021-12-09 20:51:23 PST
Note You need to log in before you can comment on or make changes to this bug.