[Playstation] Fix build break after r286751 with INTELLIGENT_TRACKING_PREVENTION enabled https://bugs.webkit.org/show_bug.cgi?id=234095

Patch by Jigen Zhou <jigen.zhou@sony.com> on 2021-12-09
Reviewed by Darin Adler.

Added a forward declaration of class ResourceError to NetworkSession.h to resolve
a compiling error. No new test is need since no behavior change is expected.

* NetworkProcess/NetworkSession.h:


Canonical link: https://commits.webkit.org/245063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286830 268f45cc-cd09-0410-ab3c-d52691b4dbfc